fix badge css wrapping

--- a/_sass/components/_badge.scss
+++ b/_sass/components/_badge.scss
@@ -6,5 +6,5 @@
   text-align: center;
   border-radius: 5px;
   font: bold;
-  word-break: keep-all;
+  white-space: nowrap;
 }
